src/components/zen-menu-item/zen-option.scss
@import '../../zen-styles/variables.scss';
@import '../../zen-styles/mixins/forms.scss';

$item-line-height: 1rem;

:host {
  position: relative;
  width: 100%;
  box-sizing: border-box;
  font-size: $text-md;
  cursor: pointer;
  line-height: $item-line-height;

  .background {
    transition: background-color 0.2s linear;
    display: flex;
    align-items: center;

    &.disabled {
      opacity: 0.5;
      pointer-events: none;
      cursor: default;
    }
  }
}

.content {
  width: 100%; // safari fix
  line-height: $item-line-height;
}

:host([size='lg'][padding='default']) .content,
:host([size='lg']:not([padding])) .content {
  // zen-space doesn't provide 0.5rem padding, so we have to do it manually:
  line-height: 0.5rem;
}

:host(:not([no-hover]):hover),
:host([selected]),
:host([focused]) {
  .background {
    background-color: $color-gray-100;
  }
}

:host([selected][focused]),
:host(:not([no-hover])[selected]:hover),
:host(:not([no-hover])[focused]:hover) {
  .background {
    background-color: $color-gray-200;
  }
}

